src/webwork/expr_parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> factor
Rule 3     statement -> list
Rule 4     expression -> expression PLUS factor
Rule 5     expression -> factor PLUS factor
Rule 6     expression -> expression MINUS factor
Rule 7     expression -> factor MINUS factor
Rule 8     factor -> factor TIMES factor
Rule 9     factor -> factor DIVIDE factor
Rule 10    factor -> factor EXP factor
Rule 11    factor -> factor factor
Rule 12    factor -> MINUS factor
Rule 13    factor -> factor FACTORIAL
Rule 14    factor -> CHOOSE LPAREN list RPAREN
Rule 15    factor -> LPAREN expression RPAREN
Rule 16    factor -> LBRACKET expression RBRACKET
Rule 17    factor -> LPAREN factor RPAREN
Rule 18    factor -> LBRACKET factor RBRACKET
Rule 19    factor -> LSET list RSET
Rule 20    factor -> LSET expression RSET
Rule 21    factor -> LSET RSET
Rule 22    factor -> LPAREN list RPAREN
Rule 23    list -> expression COMMA
Rule 24    list -> list expression COMMA
Rule 25    list -> list expression
Rule 26    list -> factor COMMA
Rule 27    list -> list factor COMMA
Rule 28    list -> list factor
Rule 29    factor -> NUMBER
Rule 30    factor -> VARIABLE

Terminals, with rules where they appear

CHOOSE               : 14
COMMA                : 23 24 26 27
DIVIDE               : 9
EXP                  : 10
FACTORIAL            : 13
LBRACKET             : 16 18
LPAREN               : 14 15 17 22
LSET                 : 19 20 21
MINUS                : 6 7 12
NUMBER               : 29
PLUS                 : 4 5
RBRACKET             : 16 18
RPAREN               : 14 15 17 22
RSET                 : 19 20 21
TIMES                : 8
VARIABLE             : 30
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 15 16 20 23 24 25
factor               : 2 4 5 5 6 7 7 8 8 9 9 10 10 11 11 12 13 17 18 26 27 28
list                 : 3 14 19 22 24 25 27 28
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . factor
    (3) statement -> . list
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE
    (23) list -> . expression COMMA
    (24) list -> . list expression COMMA
    (25) list -> . list expression
    (26) list -> . factor COMMA
    (27) list -> . list factor COMMA
    (28) list -> . list factor

    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    list                           shift and go to state 1
    expression                     shift and go to state 10
    statement                      shift and go to state 7
    factor                         shift and go to state 8

state 1

    (3) statement -> list .
    (24) list -> list . expression COMMA
    (25) list -> list . expression
    (27) list -> list . factor COMMA
    (28) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    $end            reduce using rule 3 (statement -> list .)
    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    expression                     shift and go to state 13
    factor                         shift and go to state 12

state 2

    (29) factor -> NUMBER .

    TIMES           reduce using rule 29 (factor -> NUMBER .)
    DIVIDE          reduce using rule 29 (factor -> NUMBER .)
    EXP             reduce using rule 29 (factor -> NUMBER .)
    FACTORIAL       reduce using rule 29 (factor -> NUMBER .)
    MINUS           reduce using rule 29 (factor -> NUMBER .)
    CHOOSE          reduce using rule 29 (factor -> NUMBER .)
    LPAREN          reduce using rule 29 (factor -> NUMBER .)
    LBRACKET        reduce using rule 29 (factor -> NUMBER .)
    LSET            reduce using rule 29 (factor -> NUMBER .)
    NUMBER          reduce using rule 29 (factor -> NUMBER .)
    VARIABLE        reduce using rule 29 (factor -> NUMBER .)
    COMMA           reduce using rule 29 (factor -> NUMBER .)
    PLUS            reduce using rule 29 (factor -> NUMBER .)
    $end            reduce using rule 29 (factor -> NUMBER .)
    RBRACKET        reduce using rule 29 (factor -> NUMBER .)
    RPAREN          reduce using rule 29 (factor -> NUMBER .)
    RSET            reduce using rule 29 (factor -> NUMBER .)


state 3

    (16) factor -> LBRACKET . expression RBRACKET
    (18) factor -> LBRACKET . factor RBRACKET
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    expression                     shift and go to state 15
    factor                         shift and go to state 14

state 4

    (30) factor -> VARIABLE .

    TIMES           reduce using rule 30 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 30 (factor -> VARIABLE .)
    EXP             reduce using rule 30 (factor -> VARIABLE .)
    FACTORIAL       reduce using rule 30 (factor -> VARIABLE .)
    MINUS           reduce using rule 30 (factor -> VARIABLE .)
    CHOOSE          reduce using rule 30 (factor -> VARIABLE .)
    LPAREN          reduce using rule 30 (factor -> VARIABLE .)
    LBRACKET        reduce using rule 30 (factor -> VARIABLE .)
    LSET            reduce using rule 30 (factor -> VARIABLE .)
    NUMBER          reduce using rule 30 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 30 (factor -> VARIABLE .)
    COMMA           reduce using rule 30 (factor -> VARIABLE .)
    PLUS            reduce using rule 30 (factor -> VARIABLE .)
    $end            reduce using rule 30 (factor -> VARIABLE .)
    RBRACKET        reduce using rule 30 (factor -> VARIABLE .)
    RPAREN          reduce using rule 30 (factor -> VARIABLE .)
    RSET            reduce using rule 30 (factor -> VARIABLE .)


state 5

    (19) factor -> LSET . list RSET
    (20) factor -> LSET . expression RSET
    (21) factor -> LSET . RSET
    (23) list -> . expression COMMA
    (24) list -> . list expression COMMA
    (25) list -> . list expression
    (26) list -> . factor COMMA
    (27) list -> . list factor COMMA
    (28) list -> . list factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    RSET            shift and go to state 17
    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    expression                     shift and go to state 19
    list                           shift and go to state 16
    factor                         shift and go to state 18

state 6

    (14) factor -> CHOOSE . LPAREN list RPAREN

    LPAREN          shift and go to state 20


state 7

    (0) S' -> statement .



state 8

    (2) statement -> factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (26) list -> factor . COMMA
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    $end            reduce using rule 2 (statement -> factor .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 28
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 21
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 22
    COMMA           shift and go to state 27
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    factor                         shift and go to state 26

state 9

    (15) factor -> LPAREN . expression RPAREN
    (17) factor -> LPAREN . factor RPAREN
    (22) factor -> LPAREN . list RPAREN
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE
    (23) list -> . expression COMMA
    (24) list -> . list expression COMMA
    (25) list -> . list expression
    (26) list -> . factor COMMA
    (27) list -> . list factor COMMA
    (28) list -> . list factor

    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    list                           shift and go to state 29
    expression                     shift and go to state 31
    factor                         shift and go to state 30

state 10

    (1) statement -> expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor
    (23) list -> expression . COMMA

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 34
    COMMA           shift and go to state 33


state 11

    (12) factor -> MINUS . factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    factor                         shift and go to state 35

state 12

    (27) list -> list factor . COMMA
    (28) list -> list factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    COMMA           shift and go to state 36
    RPAREN          reduce using rule 28 (list -> list factor .)
    MINUS           reduce using rule 28 (list -> list factor .)
    LPAREN          reduce using rule 28 (list -> list factor .)
    LBRACKET        reduce using rule 28 (list -> list factor .)
    LSET            reduce using rule 28 (list -> list factor .)
    NUMBER          reduce using rule 28 (list -> list factor .)
    VARIABLE        reduce using rule 28 (list -> list factor .)
    RSET            reduce using rule 28 (list -> list factor .)
    $end            reduce using rule 28 (list -> list factor .)
    PLUS            shift and go to state 24
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 21
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 22
    CHOOSE          shift and go to state 6

  ! CHOOSE          [ reduce using rule 28 (list -> list factor .) ]
  ! MINUS           [ shift and go to state 28 ]
  ! LPAREN          [ shift and go to state 9 ]
  ! LBRACKET        [ shift and go to state 3 ]
  ! LSET            [ shift and go to state 5 ]
  ! NUMBER          [ shift and go to state 2 ]
  ! VARIABLE        [ shift and go to state 4 ]

    factor                         shift and go to state 26

state 13

    (24) list -> list expression . COMMA
    (25) list -> list expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

  ! shift/reduce conflict for MINUS resolved as shift
    COMMA           shift and go to state 37
    RPAREN          reduce using rule 25 (list -> list expression .)
    CHOOSE          reduce using rule 25 (list -> list expression .)
    LPAREN          reduce using rule 25 (list -> list expression .)
    LBRACKET        reduce using rule 25 (list -> list expression .)
    LSET            reduce using rule 25 (list -> list expression .)
    NUMBER          reduce using rule 25 (list -> list expression .)
    VARIABLE        reduce using rule 25 (list -> list expression .)
    RSET            reduce using rule 25 (list -> list expression .)
    $end            reduce using rule 25 (list -> list expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 34

  ! MINUS           [ reduce using rule 25 (list -> list expression .) ]


state 14

    (18) factor -> LBRACKET factor . RBRACKET
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    RBRACKET        shift and go to state 38
    PLUS            shift and go to state 24
    MINUS           shift and go to state 28
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 21
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 22
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    factor                         shift and go to state 26

state 15

    (16) factor -> LBRACKET expression . RBRACKET
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

    RBRACKET        shift and go to state 39
    PLUS            shift and go to state 32
    MINUS           shift and go to state 34


state 16

    (19) factor -> LSET list . RSET
    (24) list -> list . expression COMMA
    (25) list -> list . expression
    (27) list -> list . factor COMMA
    (28) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    RSET            shift and go to state 40
    MINUS           shift and go to state 11
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    expression                     shift and go to state 13
    factor                         shift and go to state 12

state 17

    (21) factor -> LSET RSET .

    TIMES           reduce using rule 21 (factor -> LSET RSET .)
    DIVIDE          reduce using rule 21 (factor -> LSET RSET .)
    EXP             reduce using rule 21 (factor -> LSET RSET .)
    FACTORIAL       reduce using rule 21 (factor -> LSET RSET .)
    MINUS           reduce using rule 21 (factor -> LSET RSET .)
    CHOOSE          reduce using rule 21 (factor -> LSET RSET .)
    LPAREN          reduce using rule 21 (factor -> LSET RSET .)
    LBRACKET        reduce using rule 21 (factor -> LSET RSET .)
    LSET            reduce using rule 21 (factor -> LSET RSET .)
    NUMBER          reduce using rule 21 (factor -> LSET RSET .)
    VARIABLE        reduce using rule 21 (factor -> LSET RSET .)
    COMMA           reduce using rule 21 (factor -> LSET RSET .)
    PLUS            reduce using rule 21 (factor -> LSET RSET .)
    $end            reduce using rule 21 (factor -> LSET RSET .)
    RBRACKET        reduce using rule 21 (factor -> LSET RSET .)
    RPAREN          reduce using rule 21 (factor -> LSET RSET .)
    RSET            reduce using rule 21 (factor -> LSET RSET .)


state 18

    (26) list -> factor . COMMA
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . LPAREN expression RPAREN
    (16) factor -> . LBRACKET expression RBRACKET
    (17) factor -> . LPAREN factor RPAREN
    (18) factor -> . LBRACKET factor RBRACKET
    (19) factor -> . LSET list RSET
    (20) factor -> . LSET expression RSET
    (21) factor -> . LSET RSET
    (22) factor -> . LPAREN list RPAREN
    (29) factor -> . NUMBER
    (30) factor -> . VARIABLE

    COMMA           shift and go to state 27
    PLUS            shift and go to state 24
    MINUS           shift and go to state 28
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 21
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 22
    CHOOSE          shift and go to state 6
    LPAREN          shift and go to state 9
    LBRACKET        shift and go to state 3
    LSET            shift and go to state 5
    NUMBER          shift and go to state 2
    VARIABLE        shift and go to state 4

    factor                         shift and go to state 26

state 19

    (20) factor -> LSET expression . RSET
    (23) list -> expression . COMMA
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

    RSET            shift and go to state 41
    COMMA           shift and go to state 33
    PLUS            shift and go to state 32
    MINUS           shift and go to state 34


state 20
